fix(comments-wrapping): fix word-wrapping in comments

--- a/src/app/work-item/work-item-detail/work-item-comment/work-item-comment.component.scss
+++ b/src/app/work-item/work-item-detail/work-item-comment/work-item-comment.component.scss
@@ -79,6 +79,7 @@
         -moz-box-shadow: none;
         box-shadow: none;
         height: auto;
+        word-break: break-word;
         &:hover {
           border-color: $color-pf-blue-200;
         }
